--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
     <!-- ========================== -->
     <script src="https://code.jquery.com/jquery-3.2.0.min.js" integrity="sha256-JAW99MJVpJBGcbzEuXk4Az05s/XyDdBomFqNlM3ic+I="
     crossorigin="anonymous"></script>
-    <script type="javascript" src="app.js"></script>
+    
     <title>Home</title>
 </head>
 <body>
@@ -62,6 +62,6 @@
 
         </ul>
     </footer>
-
+    <script src="app.js"></script>
 </body>
 </html>
