secret jquery button works. all pages have header, footer, nav bar

--- a/creativeprojects.html
+++ b/creativeprojects.html
@@ -12,19 +12,28 @@
 </head>
 <body>
  
-    <div class="navbar">
-        <ul class="navbar">
-            <li class="navbar"><a href="home.html">Home</a></li>
-            <li class="pages"><a href="bio.html">Bio</a></li>
-            <li class="navbar"><a href="resume.html">Resume</a></li>
-            <li class="navbar"><a href="codeprojects.html">Coding Projects</a></li>
-            <li class="navbar"><a href="creativeprojects.html">Creative Projects</a></li>
-
-        </ul>
+    <div class="container">
+        <div class="navbar">
+            <ul class="navbar">
+                <li class="navbar"><a href="home.html">Home</a></li>
+                <li class="pages"><a href="bio.html">Bio</a></li>
+                <li class="navbar"><a href="resume.html">Resume</a></li>
+                <li class="navbar"><a href="codeprojects.html">Coding Projects</a></li>
+            </ul>
+        </div>
+        <div class="header">
+            <h2>Creative Projects</h2>
+        </div>
+    
+    
+        <footer class="links">
+            <ul class="links">
+                <li><a url="#">LinkedIn</li>
+                <li><a url="#">GitHub</li>
+                <li><a url="#">etc</li>
+            </ul>
+        </footer>
     </div>
-
-
-    <footer class="links"></footer>
 
 </body>
 </html>
