--- a/home.html
+++ b/home.html
@@ -28,6 +28,7 @@
                     <li class="pages"><a href="bio.html">Bio</a></li>
                     <li class="pages"><a href="resume.html">Resume</a></li>
                     <li class="pages"><a href="codeprojects.html">Coding Projects</a></li>
+                    <li class="pages secret"><a href="creativeprojects.html">Creative Projects</a></li>
                     <!-- creative projects link will be inserted here with jquery. give it class of pages as well! -->
     
                 </ul>
