resume list boradly styled

--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
     <title>Resume</title>
 </head>
 <body>
-    <div class="container">
+    <!-- <div class="container"> -->
         <div class="navbar">
             <ul class="navbar">
                 <li class="navbar"><a href="home.html">Home</a></li>
@@ -47,7 +47,7 @@
                 <li><a url="#">etc</li>
             </ul>
         </footer>
-    </div>
+    <!-- </div> -->
     
 </body>
 </html>
