added painting to carousel, commented out caption bc i realized it was causing problems

--- a/home.html
+++ b/home.html
@@ -52,7 +52,9 @@
                 <img src="images/oil_painting2.png" alt="dall e mini oil painting of bailey at a computer"/>
                 <img src="images/pointilism.png" alt="dall e mini pointilism painting of bailey at a computer"/>
                 <img src="images/surrealist.png" alt="dall e mini surrealist painting of bailey at a computer"/>
-                <div class="caption"><h4>A Portrait of the Coder as a craiyon rendering</h4></div>
+                <img src="images/expressionist.png" alt="dall e mini expressionist painting of bailey at a computer"/>
+                <!-- <div class="caption"><h4>A Portrait of the Coder as a craiyon rendering</h4></div> -->
+                <!-- why does this caption mess with the carousel? -->
            </div>
            <!-- ======next button  ======-->
            <div class="carousel-button next">
