got hover function to work and fixed how app.js was linked in resume page

--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://code.jquery.com/jquery-3.2.0.min.js" integrity="sha256-JAW99MJVpJBGcbzEuXk4Az05s/XyDdBomFqNlM3ic+I="
     crossorigin="anonymous"></script>
-    <script type="javascript" src="app.js"></script>
+    <script type="text/javascript" src="app.js"></script>
     <title>Resume</title>
 </head>
 <body>
@@ -25,8 +25,8 @@
         </div>
         <div class="resume content">
             <ul class="resume-list">
-                <li class="resume-item">GA Student</li>
-                <div class="hover-image"><span><img src=""/></span></div>
+                <li id="resume-item1">GA Student</li>
+                <div class="hover-image"><img id="hover-image1" src="https://png.pngtree.com/png-clipart/20201208/original/pngtree-svg-simple-line-decorative-elements-png-image_5511623.jpg" width="50px" height="50px" /></div>
                 <li class="resume-item">Preschool Teacher</li>
                 <div class="hover-image"><span><img src=""/></span></div>
                 <li class="resume-item">Farmer's Market Manager</li>
@@ -48,6 +48,6 @@
             </ul>
         </footer>
     <!-- </div> -->
-    
+    <!-- <script src="app.js"></script> -->
 </body>
 </html>
