added images to use in resume page

--- a/resume.html
+++ b/resume.html
@@ -26,7 +26,7 @@
         <div class="resume content">
             <ul class="resume-list">
                 <li id="resume-item1">GA Student</li>
-                <div class="hover-image"><img id="hover-image1" src="https://png.pngtree.com/png-clipart/20201208/original/pngtree-svg-simple-line-decorative-elements-png-image_5511623.jpg" width="50px" height="50px" /></div>
+                <div class="hover-image"><img id="hover-image1" href="resume_images/textbook.png" width="100px" height="100px" /></div>
                 <li class="resume-item">Preschool Teacher</li>
                 <div class="hover-image"><span><img src=""/></span></div>
                 <li class="resume-item">Farmer's Market Manager</li>
