resume images inserted, hover works, broadly styled

--- a/resume.html
+++ b/resume.html
@@ -26,15 +26,16 @@
         <div class="resume content">
             <ul class="resume-list">
                 <li id="resume-item1">GA Student</li>
-                <div class="hover-image"><img id="hover-image1" href="resume_images/textbook.png" width="100px" height="100px" /></div>
-                <li class="resume-item">Preschool Teacher</li>
-                <div class="hover-image"><span><img src=""/></span></div>
-                <li class="resume-item">Farmer's Market Manager</li>
-                <div class="hover-image"><span><img src=""/></span></div>
-                <li class="resume-item">Writing Tutor</li>
-                <div class="hover-image"><span><img src=""/></span></div>
-                <li class="resume-item">Philosophy and History Student</li>
-                <div class="hover-image"><span><img src=""/></span></div>
+                <div class="hover-image"><img id="hover-image1" src="resume_images/textbook.png" /></div>
+                <li id="resume-item2">Preschool Teacher</li>
+                <div class="hover-image"><img id="hover-image2" src="resume_images/kids.png" /></div>
+                <li id="resume-item3">Farmer's Market Manager</li>
+                <div class="hover-image"><img id="hover-image3" src="resume_images/bread.png" /></div>
+                <li id="resume-item4">Writing Tutor</li>
+                <div class="hover-image"><img id="hover-image4" src="resume_images/quill.png" /></div>
+                <li id="resume-item5">Philosophy and History Student</li>
+                <div class="hover-image"><img id="hover-image5" src="resume_images/chair.png" /></div>
+                
                 
             </ul>
         </div>
