--- a/creativeprojects.html
+++ b/creativeprojects.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="navbar">
             <ul class="navbar">
-                <li class="navbar"><a href="home.html">Home</a></li>
+                <li class="navbar"><a href="index.html">Home</a></li>
                 <li class="pages"><a href="bio.html">Bio</a></li>
                 <li class="navbar"><a href="resume.html">Resume</a></li>
                 <li class="navbar"><a href="codeprojects.html">Coding Projects</a></li>
