modal coded in html, css, js. automatically appears and then can be closed. needs to be styled better

--- a/codeprojects.html
+++ b/codeprojects.html
@@ -24,6 +24,21 @@
         <div class="header">
             <h2>Projects</h2>
         </div>
+
+        <!-- MODAL -->
+        <!-- modal set up based off of modal in class exercise -->
+        <div id="modal">
+            <div id="modal-textbox">
+                <a id="close" href="#">Close</a>
+                <h1>Got a Project Idea?</h1>
+                <p>Reach out to me! I'm always looking for new projects!</p>
+                <p>You can reach me at mcdonald.bailey@gmail.com</p>
+                <p>Let's help each other out!</p>
+            </div>
+        </div>
+
+        <!-- END MODAL -->
+
         <div class="projectbody">
             <div class="projectimg">
                 <img id="codeimage1" class="codeimage" src="https://previews.123rf.com/images/clairev/clairev0810/clairev081000044/3694822-cute-small-computer-vector-illustration-.jpg"/>
