--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
              </div>
              <div class="belowcarouselcontainer">
                 <div class="belowcarousel">
-                    <h3>Portrait of the Coder as a <a href="https://www.craiyon.com/">Craiyon</a> rendering</h3>
+                    <h3>Portrait of the Coder as a <a href="https://www.craiyon.com/">Craiyon</a> Rendering</h3>
                 </div>
                 
              </div>
