resume items don't go up into header anymore

--- a/resume.html
+++ b/resume.html
@@ -20,13 +20,13 @@
                 <li class="navbar"><a href="codeprojects.html">Coding Projects</a></li>
             </ul>
         </div>
-        <div class="header">
+        <div class="header resumeheader">
             <h2>Resume</h2>
         </div>
         <div class="resume content">
-            <ul class="resume-list">
+            <ul id="resume-list">
                 <li id="resume-item1">GA Student</li>
-                <div class="hover-image"><img id="hover-image1" src="resume_images/textbook.png" /></div>
+                <div class="hover-image"><img class="hover-image" id="hover-image1" src="resume_images/textbook.png" /></div>
                 <li id="resume-item2">Preschool Teacher</li>
                 <div class="hover-image"><img id="hover-image2" src="resume_images/kids.png" /></div>
                 <li id="resume-item3">Farmer's Market Manager</li>
