--- a/codeprojects.html
+++ b/codeprojects.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-    <div class="container">
+    <div class="codecontainer">
         <div class="navbar">
             <ul class="navbar">
                 <li class="navbar"><a href="index.html">Home</a></li>
