icons added to navs, homepage secret button styled

--- a/codeprojects.html
+++ b/codeprojects.html
@@ -8,6 +8,10 @@
     <script src="https://code.jquery.com/jquery-3.2.0.min.js" integrity="sha256-JAW99MJVpJBGcbzEuXk4Az05s/XyDdBomFqNlM3ic+I="
     crossorigin="anonymous"></script>
     <script type="text/javascript" src="app.js"></script>
+    <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
     <title>Projects</title>
 </head>
 <body>
@@ -15,10 +19,10 @@
     <div class="codecontainer">
         <div class="navbar">
             <ul class="navbar">
-                <li class="navbar"><a href="index.html">Home</a></li>
-                <li class="pages"><a href="bio.html">Bio</a></li>
-                <li class="navbar"><a href="resume.html">Resume</a></li>
-                <li class="navbar"><a href="codeprojects.html">Coding Projects</a></li>
+                <li class="navbar"><a href="index.html"> Home <span class="lnr lnr-home"></span></a></li>
+                <li class="pages"><a href="bio.html">Bio <span class="lnr lnr-star"></span></a></li>
+                <li class="navbar"><a href="resume.html">Resume <span class="lnr lnr-eye"></span></a></li>
+                <li class="navbar"><a href="codeprojects.html">Coding Projects <span class="lnr lnr-rocket"></span></a></li>
             </ul>
         </div>
         <div class="header">
