--- a/resume.html
+++ b/resume.html
@@ -30,15 +30,25 @@
         <div class="resume content">
             <ul id="resume-list">
                 <li id="resume-item1">GA Student</li>
-                <div class="hover-image"><img class="hover-image" id="hover-image1" src="resume_images/textbook.png" /></div>
+                <div class="hover-image">
+                    <!-- <img class="hover-image" id="hover-image1" src="resume_images/textbook.png" /> -->
+                </div>
                 <li id="resume-item2">Preschool Teacher</li>
-                <div class="hover-image"><img id="hover-image2" src="resume_images/kids.png" /></div>
+                <div class="hover-image">
+                    <!-- <img id="hover-image2" src="resume_images/kids.png" /> -->
+                </div>
                 <li id="resume-item3">Farmer's Market Manager</li>
-                <div class="hover-image"><img id="hover-image3" src="resume_images/bread.png" /></div>
+                <div class="hover-image">
+                    <!-- <img id="hover-image3" src="resume_images/bread.png" /> -->
+                </div>
                 <li id="resume-item4">Writing Tutor</li>
-                <div class="hover-image"><img id="hover-image4" src="resume_images/quill.png" /></div>
+                <div class="hover-image">
+                    <!-- <img id="hover-image4" src="resume_images/quill.png" /> -->
+                </div>
                 <li id="resume-item5">Philosophy and History Student</li>
-                <div class="hover-image"><img id="hover-image5" src="resume_images/chair.png" /></div>
+                <div class="hover-image">
+                    <!-- <img id="hover-image5" src="resume_images/chair.png" /> -->
+                </div>
                 
                 
             </ul>
