put in lorem ipsum stuff so styling is easier to see/do

--- a/creativeprojects.html
+++ b/creativeprojects.html
@@ -33,16 +33,16 @@
         <div class="projectbody">
             <div class="projectimg">
                 <img id="creativeimage1" class="codeimage" src="creative_images/hat.jpg"/>
-                <div id="creativehovertext1" class="hover-text"><h4>hover heading</h4><p>hover content</p></div>
+                <div id="creativehovertext1" class="hover-text"><h4>hover heading</h4><p>Red leicester cheese triangles brie. Port-salut boursin manchego gouda cauliflower cheese st. agur blue cheese say cheese lancashire. Swiss cow feta airedale cheesecake cheesecake caerphilly babybel. Cheeseburger mozzarella bocconcini cheese strings mascarpone.</p></div>
             </div>
             <div class="projectimg">
-                <img id="creativeimage2" class="codeimage" src="creative_images/hat.jpg"/><div id="creativehovertext2" class="hover-text"><h4>hover heading</h4><p>hover content</p></div>
+                <img id="creativeimage2" class="codeimage" src="creative_images/hat.jpg"/><div id="creativehovertext2" class="hover-text"><h4>hover heading</h4><p>Red leicester cheese triangles brie. Port-salut boursin manchego gouda cauliflower cheese st. agur blue cheese say cheese lancashire. Swiss cow feta airedale cheesecake cheesecake caerphilly babybel. Cheeseburger mozzarella bocconcini cheese strings mascarpone.</p></div>
             </div>
             <div class="projectimg">
-                <img id="creativeimage3" class="codeimage" src="creative_images/hat.jpg"/><div id="creativehovertext3" class="hover-text"><h4>hover heading</h4><p>hover content</p></div>
+                <img id="creativeimage3" class="codeimage" src="creative_images/hat.jpg"/><div id="creativehovertext3" class="hover-text"><h4>hover heading</h4><p>Red leicester cheese triangles brie. Port-salut boursin manchego gouda cauliflower cheese st. agur blue cheese say cheese lancashire. Swiss cow feta airedale cheesecake cheesecake caerphilly babybel. Cheeseburger mozzarella bocconcini cheese strings mascarpone.</p></div>
             </div>
             <div class="projectimg">
-                <img id="creativeimage4" class="codeimage" src="creative_images/hat.jpg"/><div id="creativehovertext4" class="hover-text"><h4>hover heading</h4><p>hover content</p></div>
+                <img id="creativeimage4" class="codeimage" src="creative_images/hat.jpg"/><div id="creativehovertext4" class="hover-text"><h4>hover heading</h4><p>Red leicester cheese triangles brie. Port-salut boursin manchego gouda cauliflower cheese st. agur blue cheese say cheese lancashire. Swiss cow feta airedale cheesecake cheesecake caerphilly babybel. Cheeseburger mozzarella bocconcini cheese strings mascarpone.</p></div>
             </div>
         </div>
 
