took away headers. bio body looking good (at least on computer... need to investigate phone size)

--- a/creativeprojects.html
+++ b/creativeprojects.html
@@ -25,9 +25,9 @@
                 <li class="navbar"><a href="codeprojects.html">Coding Projects <span class="lnr lnr-rocket"></span></a></li>
             </ul>
         </div>
-        <div class="header">
+        <!-- <div class="header">
             <h2>Creative Projects</h2>
-        </div>
+        </div> -->
     
 
         <div class="projectbody">
