--- a/resume.html
+++ b/resume.html
@@ -24,9 +24,9 @@
                 <li class="navbar"><a href="codeprojects.html">Coding Projects <span class="lnr lnr-rocket"></span></a></li>
             </ul>
         </div>
-        <div class="header resumeheader">
+        <!-- <div class="header resumeheader">
             <h2>Resume</h2>
-        </div>
+        </div> -->
         <div class="resume content">
             <ul id="resume-list">
                 <li id="resume-item1">GA Student</li>
