--- a/codeprojects.html
+++ b/codeprojects.html
@@ -25,9 +25,9 @@
                 <li class="navbar"><a href="codeprojects.html">Coding Projects <span class="lnr lnr-rocket"></span></a></li>
             </ul>
         </div>
-        <div class="header">
+        <!-- <div class="header">
             <h2>Projects</h2>
-        </div>
+        </div> -->
 
         <!-- MODAL -->
         <!-- modal set up based off of modal in class exercise -->
