modal styled for mobile and x icon by close button

--- a/codeprojects.html
+++ b/codeprojects.html
@@ -33,7 +33,7 @@
         <!-- modal set up based off of modal in class exercise -->
         <div id="modal">
             <div id="modal-textbox">
-                <a id="close" href="#">Close</a>
+                <a id="close" href="#"><span class="lnr lnr-cross"></span> Close</a>
                 <h1>Got a Project Idea?</h1>
                 <p>Reach out to me! I'm always looking for new projects!</p>
                 <p>You can reach me at mcdonald.bailey@gmail.com</p>
