home shows on mobile nav bar now

--- a/resume.html
+++ b/resume.html
@@ -20,8 +20,8 @@
 <body>
     <!-- <div class="container"> -->
         <div class="navbar">
-            <ul class="navbar">
-                <li class="navbar"><a href="index.html"> Home <span class="lnr lnr-home"></span></a></li>
+            <ul class="navbar" id="navid">
+                <li class="navbar" id="homenav"><a href="index.html"> Home <span class="lnr lnr-home"></span></a></li>
                 <li class="navbar"><a href="bio.html">Bio <span class="lnr lnr-star"></span></a></li>
                 <li class="navbar"><a href="resume.html">Resume <span class="lnr lnr-eye"></span></a></li>
                 <li class="navbar"><a href="codeprojects.html">Coding Projects <span class="lnr lnr-rocket"></span></a></li>
