--- a/creativeprojects.html
+++ b/creativeprojects.html
@@ -30,22 +30,22 @@
         </div> -->
     
 
-        <div class="projectbody">
-            <div class="projectimg">
-                <img id="creativeimage1" class="codeimage" src="creative_images/hat.jpg"/>
-                <div id="creativehovertext1" class="hover-text"><h4>hover heading</h4><p>Red leicester cheese triangles brie. Port-salut boursin manchego gouda cauliflower cheese st. agur blue cheese say cheese lancashire. Swiss cow feta airedale cheesecake cheesecake caerphilly babybel. Cheeseburger mozzarella bocconcini cheese strings mascarpone.</p></div>
-            </div>
-            <div class="projectimg">
-                <img id="creativeimage2" class="codeimage" src="creative_images/hat.jpg"/><div id="creativehovertext2" class="hover-text"><h4>hover heading</h4><p>Red leicester cheese triangles brie. Port-salut boursin manchego gouda cauliflower cheese st. agur blue cheese say cheese lancashire. Swiss cow feta airedale cheesecake cheesecake caerphilly babybel. Cheeseburger mozzarella bocconcini cheese strings mascarpone.</p></div>
-            </div>
-            <div class="projectimg">
-                <img id="creativeimage3" class="codeimage" src="creative_images/hat.jpg"/><div id="creativehovertext3" class="hover-text"><h4>hover heading</h4><p>Red leicester cheese triangles brie. Port-salut boursin manchego gouda cauliflower cheese st. agur blue cheese say cheese lancashire. Swiss cow feta airedale cheesecake cheesecake caerphilly babybel. Cheeseburger mozzarella bocconcini cheese strings mascarpone.</p></div>
-            </div>
-            <div class="projectimg">
-                <img id="creativeimage4" class="codeimage" src="creative_images/hat.jpg"/><div id="creativehovertext4" class="hover-text"><h4>hover heading</h4><p>Red leicester cheese triangles brie. Port-salut boursin manchego gouda cauliflower cheese st. agur blue cheese say cheese lancashire. Swiss cow feta airedale cheesecake cheesecake caerphilly babybel. Cheeseburger mozzarella bocconcini cheese strings mascarpone.</p></div>
-            </div>
-        </div>
+        <div class="code-container">
+            <!-- <div class="projectimg"> -->
+                <img id="codeimage1" class="codeimage" src="creative_images/hat.jpg"/>
+                <div id="hovertext1" class="hover-text"><h4>hover heading</h4><p>Cheese strings mascarpone melted cheese. Swiss halloumi cottage cheese queso lancashire cauliflower cheese cheese slices mozzarella. Melted cheese rubber cheese rubber cheese croque monsieur port-salut red leicester cheese on toast feta. Who moved my cheese parmesan.</p></div>
+            <!-- </div> -->
+            <!-- <div class="projectimg"> -->
+                <img id="codeimage2" class="codeimage" src="creative_images/hat.jpg"/><div id="hovertext2" class="hover-text"><h4>hover heading</h4><p>Cheese strings mascarpone melted cheese. Swiss halloumi cottage cheese queso lancashire cauliflower cheese cheese slices mozzarella. Melted cheese rubber cheese rubber cheese croque monsieur port-salut red leicester cheese on toast feta. Who moved my cheese parmesan.</p></div>
+            <!-- </div>
+            <div class="projectimg"> -->
+                <img id="codeimage3" class="codeimage" src="creative_images/hat.jpg"/><div id="hovertext3" class="hover-text"><h4>hover heading</h4><p>Rubber cheese dolcelatte cheese triangles. Danish fontina cow cauliflower cheese goat dolcelatte cheddar melted cheese rubber cheese. Blue castello jarlsberg roquefort squirty cheese cottage cheese cheesecake parmesan croque monsieur. Cow brie.</p></div>
+            <!-- </div>
+            <div class="projectimg"> -->
+                <img id="codeimage4" class="codeimage" src="creative_images/hat.jpg"/><div id="hovertext4" class="hover-text"><h4>hover heading</h4><p>Camembert de normandie mozzarella goat. Fondue chalk and cheese cheese strings cheesy grin everyone loves taleggio mascarpone cheese strings. Cheesecake goat roquefort cheeseburger fromage frais who moved my cheese cheese and wine cauliflower cheese. Roquefort queso squirty cheese macaroni cheese mozzarella monterey jack say cheese.</p></div>
+            <!-- </div> -->
 
+        </div>
 
 
     
