home page nav bar scrolls on mobile now

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <!-- NAV CONTAINER  -->
             <div class="home-nav">
                 <ul class="pages" id="home-pages">
-                    <li class="pages"><a href="bio.html">Bio <span class="lnr lnr-star"></span></a></li>
+                    <li class="pages biolink"><a href="bio.html">Bio <span class="lnr lnr-star"></span></a></li>
                     <li class="pages"><a href="resume.html">Resume <span class="lnr lnr-eye"></span></a></li>
                     <li class="pages"><a href="codeprojects.html">Coding Projects <span class="lnr lnr-rocket"></span></a></li>
                     <li class="pages secret"><a href="creativeprojects.html">Creative Projects <span class="lnr lnr-smile"></span></a></li>
