--- a/codeprojects.html
+++ b/codeprojects.html
@@ -44,7 +44,7 @@
         <div class="code-container">
             <!-- <div class="projectimg"> -->
                 <img id="codeimage1" class="codeimage" src="https://placekitten.com/500/500"/>
-                <div id="hovertext1" class="hover-text"><h4>hover heading</h4><p>Cheese strings mascarpone melted cheese. Swiss halloumi cottage cheese queso lancashire cauliflower cheese cheese slices mozzarella. Melted cheese rubber cheese rubber cheese croque monsieur port-salut red leicester cheese on toast feta. Who moved my cheese parmesan.</p></div>
+                <div id="hovertext1" class="hover-text"><h4>The Toothy Landscaper</h4><p> I developed this game with Chet Vincent. In it, you play a bum landscaper on the verge of losing his wife. In order to stop her from leaving you, you go to work with all you have... your teeth. As you slowly accumulate more money you have to decide between buying new tools (perhaps a lawnmower) or gift for your wife (she asks you every day for a nice pair of heels). As you're chugging away trying to make ends meet and keep your wife happy, life knocks you down again and again... your car needs repairs, your cat needs to go to the vet, your rent increases. It seems like the work will never end!</p></div>
             <!-- </div> -->
             <!-- <div class="projectimg"> -->
                 <img id="codeimage2" class="codeimage" src="https://placekitten.com/500/500"/><div id="hovertext2" class="hover-text"><h4>hover heading</h4><p>Cheese strings mascarpone melted cheese. Swiss halloumi cottage cheese queso lancashire cauliflower cheese cheese slices mozzarella. Melted cheese rubber cheese rubber cheese croque monsieur port-salut red leicester cheese on toast feta. Who moved my cheese parmesan.</p></div>
