filling out projects pages

--- a/resume.html
+++ b/resume.html
@@ -32,7 +32,7 @@
         </div> -->
         <div class="resume content">
             <ul id="resume-list">
-                <li id="resume-item1">GA Student</li>
+                <li id="resume-item1">General Assembly Student</li>
                 
               
                 <li id="resume-item2">Preschool Teacher</li>
