updated github and linkedin links

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
     
     <footer class="links">
         <ul class="links" id="mobile">
-            <li class="mobile"><a url="#">LinkedIn</li>
-            <li class="mobile"><a url="#">GitHub</li>
+            <li class="mobile"><a url="https://www.linkedin.com/in/bailey-s-mcdonald/">LinkedIn</li>
+            <li class="mobile"><a url="https://github.com/texasmami/">GitHub</li>
             <li class="mobile"><a url="#">etc</li>
 
         </ul>
