fixed links... changed a tag url to href

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
     
     <footer class="links">
         <ul class="links" id="mobile">
-            <li class="mobile"><a url="https://www.linkedin.com/in/bailey-s-mcdonald/">LinkedIn</li>
-            <li class="mobile"><a url="https://github.com/texasmami/">GitHub</li>
-            <li class="mobile"><a url="#">etc</li>
+            <li class="mobile"><a href="https://www.linkedin.com/in/bailey-s-mcdonald/">LinkedIn</li>
+            <li class="mobile"><a href="https://github.com/texasmami/">GitHub</li>
+            <li class="mobile"><a href="#">etc</li>
 
         </ul>
     </footer>
