--- a/creativeprojects.html
+++ b/creativeprojects.html
@@ -40,7 +40,7 @@
             <!-- </div> -->
             <!-- <div class="projectimg"> -->
                 <div class="imageandtext">
-                    <img id="codeimage2" class="codeimage" src="creative_images/quilt.jpeg"/><div id="hovertext2" class="hover-text"><h4>Emily Quilt</h4><p>I made this quilt based off of Joanna Newsom's song <a href="https://www.youtube.com/watch?v=D1lBOA_8OZ0&ab_channel=JoannaNewsom-Topic">Emily</a>. I hand embroidered the girls bound in the vine and did the rest with my firend Nick's sewing machine. This is the first quilt I ever made!</p>
+                    <img id="codeimage2" class="codeimage" src="creative_images/quilt.jpeg"/><div id="hovertext2" class="hover-text"><h4>Emily Quilt</h4><p>I made this quilt based off of Joanna Newsom's song <a href="https://www.youtube.com/watch?v=D1lBOA_8OZ0&ab_channel=JoannaNewsom-Topic">Emily</a>. I hand embroidered the girls bound in the vine and did the rest with my friend Nick's sewing machine. This is the first quilt I ever made!</p>
                     <img id="detail" src="creative_images/face_detail.jpeg"/></div>
                 </div>
                 
