fixing another typo'

--- a/creativeprojects.html
+++ b/creativeprojects.html
@@ -55,7 +55,7 @@
             <div class="projectimg"> -->
                 <div class="imageandtext">
 
-                    <img id="codeimage4" class="codeimage" src="creative_images/crochet2.jpeg"/><div id="hovertext4" class="hover-text"><h4>Crochet Scarf</h4><p>This was the first thing I ever crocheted! A scarf to keep me warm in thos cold philly winters. With a pop of lime green to brighten up those bleak winter city blocks. I crocheted it all on trains back and forth to DC. I like tapestry crochet, but I think I've discovered, knitting is generally superior.</p></div>
+                    <img id="codeimage4" class="codeimage" src="creative_images/crochet2.jpeg"/><div id="hovertext4" class="hover-text"><h4>Crochet Scarf</h4><p>This was the first thing I ever crocheted! A scarf to keep me warm in those cold philly winters. With a pop of lime green to brighten up those bleak winter city blocks. I crocheted it all on trains back and forth to DC. I like tapestry crochet, but I think I've discovered, knitting is generally superior.</p></div>
                 </div>
                 
             <!-- </div> -->
